[tool.poetry]
name = "assignmentbackend"
version = "0.1.0"
description = ""
authors = ["round2fight <rosdancodes@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.1.0"
flask-cors = "^5.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
